<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:cardBackgroundColor="#202124"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/popupbg">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout18"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.85">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:fontFamily="@font/misterpixel"
                    android:gravity="center"
                    android:text="@string/degerlendirme"
                    android:textAlignment="center"
                    android:textColor="#F7A937"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout20"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout19"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.55"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout18"
                app:layout_constraintWidth_percent="0.9">

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/edittextbg"
                    android:ems="10"
                    android:fontFamily="@font/misterpixel"
                    android:gravity="start|top"
                    android:hint="@string/degerlendirmeyazin"
                    android:inputType="textMultiLine"
                    android:textColor="#F7A937"
                    android:textColorHighlight="#FFF2DF"
                    android:textColorHint="#F7A937"
                    android:textColorLink="#F7A937"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.9" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout19"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout20"
                app:layout_constraintWidth_percent="0.9">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/degerlendirbg"
                    android:fontFamily="@font/misterpixel"
                    android:text="@string/degerlendir"
                    android:textColor="#5AF737"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button7"
                    app:layout_constraintHeight_percent="0.95"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.45" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/kapatbg"
                    android:fontFamily="@font/misterpixel"
                    android:text="@string/kapat"
                    android:textColor="#DA1F44"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.95"
                    app:layout_constraintStart_toEndOf="@+id/button6"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>