<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="325dp"
        android:background="@drawable/menuarka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="325dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout194"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout195"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.8">

                    <Button
                        android:id="@+id/button53"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/menucizgi"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.2" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout195"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.88"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout194"
                    app:layout_constraintWidth_percent="1">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/butonbg"
                        android:fontFamily="@font/joystix"
                        android:text="@string/maillegirisyap"
                        android:textAllCaps="false"
                        android:textColor="#F7A937"
                        app:layout_constraintBottom_toTopOf="@+id/promoButon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.175"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.75" />

                    <Button
                        android:id="@+id/promoButon"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/butonbg"
                        android:fontFamily="@font/joystix"
                        android:text="@string/promo"
                        android:textAllCaps="false"
                        android:textColor="#F7A937"
                        app:layout_constraintBottom_toTopOf="@+id/button2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.175"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button"
                        app:layout_constraintWidth_percent="0.7" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/butonbg"
                        android:fontFamily="@font/joystix"
                        android:text="@string/muzigikapat"
                        android:textAllCaps="false"
                        android:textColor="#F7A937"
                        app:layout_constraintBottom_toTopOf="@+id/button4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.175"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/promoButon"
                        app:layout_constraintWidth_percent="0.65" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/butonbg"
                        android:fontFamily="@font/joystix"
                        android:text="@string/cikisyap"
                        android:textAllCaps="false"
                        android:textColor="#F7A937"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.175"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button2"
                        app:layout_constraintWidth_percent="0.5" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>