<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:background="@drawable/menuarka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="275dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout194"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout195"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.8">

                    <Button
                        android:id="@+id/button53"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/menucizgi"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.2" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout195"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.88"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout194"
                    app:layout_constraintWidth_percent="1">

                    <EditText
                        android:id="@+id/kullaniciadiText"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:backgroundTint="#F7A937"
                        android:ems="10"
                        android:fontFamily="@font/misterpixel"
                        android:hint="@string/kullaniciadi"
                        android:inputType="text"
                        android:textColor="#F7A937"
                        android:textColorHighlight="#FFF2DF"
                        android:textColorHint="#F7A937"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/sifreText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.25"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.6" />

                    <EditText
                        android:id="@+id/sifreText"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:backgroundTint="#F7A937"
                        android:ems="10"
                        android:fontFamily="@font/misterpixel"
                        android:hint="@string/sifre"
                        android:inputType="textPassword"
                        android:textAllCaps="false"
                        android:textColor="#F7A937"
                        android:textColorHighlight="#FFF2DF"
                        android:textColorHint="#F7A937"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/btngiris"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.25"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/kullaniciadiText"
                        app:layout_constraintWidth_percent="0.6" />

                    <Button
                        android:id="@+id/btngiris"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/butonbg"
                        android:fontFamily="@font/joystix"
                        android:text="@string/girisyap"
                        android:textColor="#F7A937"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sifreText"
                        app:layout_constraintWidth_percent="0.75" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>